<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/mainCoordinatorLayout"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/blue">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:text="@string/app_name"
                android:textSize="50sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/blue_dark"
            >

            <ImageView
                android:id="@+id/iconoConfig"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="60dp"
                android:contentDescription="@string/click_para_ir_a_ajustes"
                android:src="@drawable/config"
                app:tint="@android:color/white"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageView
                android:id="@+id/iconoHome"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/click_para_ir_al_inicio"
                android:src="@drawable/home"
                app:tint="@android:color/white"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageView
                android:id="@+id/iconoCerrarSesion"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/click_para_cerrar_sesion"
                android:src="@drawable/logout_dark"
                app:tint="@android:color/white"
                tools:ignore="RedundantDescriptionCheck" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp"
        android:id="@+id/mainLinearLayout"
        >

        <EditText
            android:id="@+id/editTituloNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/t_tulo_de_la_nota"
            android:minHeight="48sp"
            android:paddingStart="8dp"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editCuerpoNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/cuerpo"
            android:minHeight="48sp"
            android:paddingStart="8dp"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:textColor="@android:color/white"
            android:layout_gravity="center" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
